2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
	  doctype parsing changes. Fix jumping to selections.

	* MonoDevelop.Xml.StateEngine/XDom.cs:
	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: XDocType now
	  captures root element, URI, FPI, and the internal
	  declaration region. Fixes Bug 481897 - xml can't be parsed.

	* MonoDevelop.Xml.StateEngine/XmlParsedDocument.cs: Fold large
	  DocTypes.

	* gtk-gui/gui.stetic: Flush.

2009-02-27  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.csproj:
	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
	* MonoDevelop.XmlEditor.Completion/InferredXmlCompletionProvider.cs:
	  Add support for very simplistic inferred XML completion when
	  a schema isn't present.

2009-02-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/XmlSchemasPanelWidget.cs: Make
	  column headers translatable.

2009-02-20  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs: Don't
	  end attribute values on > character.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Xml.StateEngine/XmlTagState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeState.cs:
	* MonoDevelop.Xml.StateEngine/XmlAttributeValueState.cs:
	  Improve error handling.

2009-02-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Fix logic error
	  that caused NRE with empty documents.

2009-02-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Use Pad
	  font.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Local-copy schemas.

2009-02-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.csproj: Nuke another project reference
	  local copy.
