@@ -1,5 +1,10 @@
 2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>
 
+	* MonoDevelop.Xml.StateEngine/XmlDocTypeState.cs: Don't
+	  capture quotes.
+
+2009-03-04  Michael Hutchinson  <mhutchinson@novell.com>
+
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Track
 	  doctype parsing changes. Fix jumping to selections.
 
